layanan menu fix secara flow

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ VITE_SUPABASE_URL="https://vncabxtxbiqaoluxprlh.supabase.co"
 
 # WAHA Configuration
 VITE_WAHA_URL="http://34.83.178.21:3000"
-VITE_WAHA_API_KEY="your_waha_api_key"
+VITE_WAHA_API_KEY="admin"
 VITE_WAHA_SESSION="default"
