--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-native-async-storage/async-storage": "1.18.2",
     "@supabase/supabase-js": "^2.38.4",
     "expo": "~49.0.15",
+    "expo-camera": "^16.1.11",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
@@ -23,8 +26,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
