--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,8 +15,8 @@
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.38.4",
     "expo": "~49.0.15",
-    "expo-camera": "^16.1.11",
-    "expo-image-picker": "^16.1.4",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
